# fissile

./: .pre-commit-config.yaml  Cargo.toml  README.md
.agents/: fissile.toml  grund.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  pre-release-checks.yml
benches/: instructions.rs
docs/: goals.md  grund.md  roadmap.md
docs/architecture/: AR-001-ci.md  AR-002-instruction-benchmarks.md  README.md
docs/decisions/architectural/: DA-001-token-external-command.md  DA-002-instruction-count-benchmarks.md  DA-003-single-static-binary.md
docs/decisions/functional/: DF-001-tool-name.md  DF-002-explicit-config.md
docs/functional-spec/: FS-001-config.md  FS-002-init.md  FS-003-exceptions.md  FS-004-check-audit.md  FS-005-exception-add.md  README.md
e2e/: README.md
e2e/cases/E2E-001-check-clean/: E2E-001-check-clean.md  case.toml
e2e/cases/E2E-002-check-hard-blocks/: E2E-002-check-hard-blocks.md  case.toml
e2e/cases/E2E-003-check-soft-warns/: E2E-003-check-soft-warns.md  case.toml
e2e/cases/E2E-004-check-json/: E2E-004-check-json.md  case.toml
e2e/cases/E2E-005-exception-silences-hard/: E2E-005-exception-silences-hard.md  case.toml
e2e/cases/E2E-006-audit-inventory/: E2E-006-audit-inventory.md  case.toml
e2e/cases/E2E-007-init-installs-hook/: E2E-007-init-installs-hook.md  case.toml
examples/: AGENTS.fissile.md  file-size-exceptions.md  fissile.toml
schema/: audit.schema.json  check.schema.json  finding.schema.json
scripts/: pgo-build.sh
src/: audit.rs  check.rs  checker_tests.rs  cli.rs  comments.rs  config.rs  exception.rs  exceptions.rs  exceptions_tests.rs  glob.rs  hook.rs  init.rs  json.rs  lib.rs  main.rs  model.rs  report.rs  scan.rs
src/templates/: agents-block.md  fissile.default.toml  hard-exceptions.toml  soft-exceptions.toml
tests/: agent_loop.rs  commands.rs  config_fixtures.rs  e2e.rs  help.rs  json_schema.rs
(+12 files in other folders)
